--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CodeSmith Social Media Platform",
   "main": "index.js",
   "scripts": {
-    "development": "nodemon",
+    "dev": "nodemon & npx tailwindcss -i ./client/styles.css -o ./output.css --watch",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
     "start": "NODE_ENV=production node ./dist/server.generated.js"
   },
@@ -14,23 +14,24 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "autoprefixer": "^10.4.13",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
+    "postcss": "^8.4.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
-    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.2",
     "nodemon": "^2.0.15",
-    "postcss": "^8.4.19",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.2.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.3.0",
