--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "postcss": "^8.4.19",
