--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
+    "gapi-script": "^1.2.0",
+    "install": "^0.13.0",
+    "npm": "^9.1.2",
     "postcss": "^8.4.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hot-loader": "^4.13.0",
     "react-scripts": "^5.0.1",
     "swr": "^1.3.0",
