--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-hot-loader": "^4.13.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.1",
     "swr": "^1.3.0",
     "tailwindcss": "^3.2.4"
